--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <h1>Abdeldjalil Chougui</h1>
       <p>I'm <span class="typed" data-typed-items="Solana Builder ⚡, Rustacean 🦀, Software Engineer, IT Consultant"></span></p>
       <p style="color: white; font-weight: bold">
-        - Solana Developer
+        - Solana Developer <br>
         - Backend Engineer (Django, GoLang, Rust) <br>
         - Mobile Developer (Flutter) <br>
         - Front End Developer (React.js, Next.js, Tailwind, Typescript) <br>
@@ -224,7 +224,7 @@
           <h2>Resume</h2>
           <p>
             I graduated from <strong>Ferhat Abbas Setif -1- University</strong>, the <strong>top #1</strong> university 
-            in Algeria in 2022, with a <strong>Master’s degree in Data Science and Web Technologies</strong>, 
+            in Algeria, with a <strong>Master’s degree in Data Science and Web Technologies</strong>, 
             achieving a grade of <strong>excellent</strong> and a <strong>GPA of A</strong> (top 5%). 
             I also hold a <strong>Bachelor’s degree in Computer Science</strong>, completed with an <strong>excellent grade</strong> 
             and <strong>GPA of A</strong> (top 2%).
@@ -296,13 +296,11 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>MASTER of Data Science and Web Technologies at <a href="https://www.univ-setif.dz/">UFAS Sétif</a></h4>
-              <h5>2020-2022</h5>
               <p><em> Data Engineering and Web Technologies</em></p>
               <p>After studying computer science in LICENSE, I get more specialized in Data Science in the MASTER, in which we focused on <strong>Machine Learning, Deep Learning, NLP, Big Data, Web Applications Security...</strong></p>
             </div>
             <div class="resume-item">
               <h4>LICENCE of Computer Science at <a href="https://www.univ-setif.dz/">UFAS Sétif</a></h4>
-              <h5>2017-2020</h5>
               <p><em>Computer Science</em></p>
               <p>In this degree I studied a lot of modules that can help me understanding the computer science such as : <strong>Algorithms & Data Structure, Computer Architecture, OOP, Information Systems, Language Theory, Data Bases, Operating Systems, Web Development...</strong></p>
             </div>
