--- a/index.html
+++ b/index.html
@@ -857,6 +857,16 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js" defer></script>
   #<script src="assets/vendor/php-email-form/validate.js" defer></script>
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SE39DRQ96G"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    // Replace with your Measurement ID
+    gtag('config', 'G-SE39DRQ96G');
+  </script>
+  
   <!-- Template Main JS File -->
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/portfolio.js" defer></script>
